gcc-14.2.0/gcc/testsuite/gdc.test/compilable/protection/issue21726/package.d
version https://git-lfs.github.com/spec/v1
oid sha256:a21ce43e2ebaec679cc6c45c69f0892a4992858d45a557e909718c95015a06d3
size 30
